# package_template

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: cicd.yml  codeql-analysis.yml  dependency-review.yml
Docker/test/: Dockerfile
tests/: test_dummy.py
