[metadata]
name = package_name
version = attr: package_name.__version__
description = Provide description here

[options]
packages = find:
python_requires = >=3.8
install_requires =

[options.extras_require]
dev =
    pre-commit
    autoflake
    flake8
    black
    build
    mypy
    isort
    pylint
    pytest
    pytest-cov
    pip-tools
    wheel
    twine
    ipykernel
    ipython
    types-Pillow
    types-PyYAML
    types-regex
    types-requests
    types-setuptools
    types-simplejson
    types-tabulate
    types-toml
    types-tqdm

[flake8]
max-line-length = 120
extend-ignore = E203
per-file-ignores = __init__.py:F401
